--- a/package.json
+++ b/package.json
@@ -12,33 +12,37 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^2.0.2",
+    "@supabase/supabase-js": "^2.39.0",
+    "@tanstack/react-query": "^5.17.0",
+    "@types/react-window": "^1.8.8",
+    "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
-    "@tanstack/react-query": "^5.17.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "lucide-react": "^0.303.0"
+    "react-window": "^2.2.6",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^1.1.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "fast-check": "^3.15.0",
+    "jsdom": "^23.0.1",
+    "msw": "^2.0.11",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vitest": "^1.1.0",
-    "@vitest/ui": "^1.1.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "fast-check": "^3.15.0",
-    "jsdom": "^23.0.1",
-    "msw": "^2.0.11"
+    "vitest": "^1.1.0"
   }
 }
